--- a/Semantic-Elements.html.html
+++ b/Semantic-Elements.html.html
@@ -6,6 +6,7 @@
   p {color: red;}
 </style>
 <title>Semantic-Elements</title>
+<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 
 <body>
