--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Practice</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
   <body>
     <header>
-      <h1>Projects I am working on!</h1>
+      <h1>Projects I am working on! <i class="fab fa-angellist"></i></h1>
     </header>
 
         <article>
@@ -16,12 +18,20 @@
               <a href="Aboutme.html">About Me!
               <img src="major.jpg" alt="My dog Major" width="200"></a></li>
             <li><h2>Semantics</h2>
-            <a href="index.html">Semantics
-            <img src="code.jpg" alt="code" width="200"></a></li>
+              <a href="index.html">Semantics
+              <img src="code.jpg" alt="code" width="200"></a></li>
             <li><h2>Practice</h2>
-            <a href="practice.html">Practice
-            <img src="Dog.jpg" alt="Dog" width="200"></a></li>
+              <a href="practice.html">Practice
+              <img src="Dog.jpg" alt="Dog" width="200"></a></li>
           </ul>
+        </article>
+        <article class="flex-container">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat.</p>
+          <p>Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </article>
 
         <footer>
