--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,7 @@
           </ul>
         </article>
         <article class="flex-container">
+          <h3>Lorem</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
